Completing the codes related to connecting to the Metamask wallet

--- a/Sample/01-helloDApp/app/src/index.html
+++ b/Sample/01-helloDApp/app/src/index.html
@@ -12,6 +12,7 @@
   <body>
     <div class="header">
       <h1>Hellp DApp v1.0</h1>
+      <button type="button" id="current_account">Connect To Wallet</button>
     </div>
 
     <div class="box">
